--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -8,4 +8,5 @@
     <string name="remove">Remove</string>
     <string name="add_to_cart">Add to Cart</string>
     <string name="remove_from_cart">Remove from Cart</string>
+    <string name="cart_empty">Your cart is empty</string>
 </resources>
